// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot Tests DashboardPage Snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="welcome-hero container-fluid"
      >
        <div
          class="pb-3 justify-content-center align-items-center row"
        >
          <div
            class="py-5 col-xl-4 col-lg-5 col-sm-8"
          >
            <div
              class="rounded text-center text-white py-5"
            >
              <h1
                class="fw-bold"
              >
                Find the cheapest fuel for your vehicle.
              </h1>
              <span>
                Use your location or enter your suburb below.
              </span>
              <div
                class="hero-search-container mt-3"
              >
                <div
                  class="mapboxgl-ctrl-geocoder mapboxgl-ctrl"
                >
                  <svg
                    class="mapboxgl-ctrl-geocoder--icon mapboxgl-ctrl-geocoder--icon-search"
                    height="18"
                    viewBox="0 0 18 18"
                    width="18"
                    xml:space="preserve"
                  >
                    <path
                      d="M7.4 2.5c-2.7 0-4.9 2.2-4.9 4.9s2.2 4.9 4.9 4.9c1 0 1.8-.2 2.5-.8l3.7 3.7c.2.2.4.3.8.3.7 0 1.1-.4 1.1-1.1 0-.3-.1-.5-.3-.8L11.4 10c.4-.8.8-1.6.8-2.5.1-2.8-2.1-5-4.8-5zm0 1.6c1.8 0 3.2 1.4 3.2 3.2s-1.4 3.2-3.2 3.2-3.3-1.3-3.3-3.1 1.4-3.3 3.3-3.3z"
                    />
                  </svg>
                  <input
                    aria-label="Search"
                    class="mapboxgl-ctrl-geocoder--input"
                    placeholder="Search"
                    type="text"
                  />
                  <div
                    class="suggestions-wrapper"
                  >
                    <ul
                      class="suggestions"
                      style="display: none;"
                    />
                  </div>
                  <div
                    class="mapboxgl-ctrl-geocoder--pin-right"
                  >
                    <button
                      aria-label="Clear"
                      class="mapboxgl-ctrl-geocoder--button"
                    >
                      <svg
                        class="mapboxgl-ctrl-geocoder--icon mapboxgl-ctrl-geocoder--icon-close"
                        height="18"
                        viewBox="0 0 18 18"
                        width="18"
                        xml:space="preserve"
                      >
                        <path
                          d="M3.8 2.5c-.6 0-1.3.7-1.3 1.3 0 .3.2.7.5.8L7.2 9 3 13.2c-.3.3-.5.7-.5 1 0 .6.7 1.3 1.3 1.3.3 0 .7-.2 1-.5L9 10.8l4.2 4.2c.2.3.7.3 1 .3.6 0 1.3-.7 1.3-1.3 0-.3-.2-.7-.3-1l-4.4-4L15 4.6c.3-.2.5-.5.5-.8 0-.7-.7-1.3-1.3-1.3-.3 0-.7.2-1 .3L9 7.1 4.8 2.8c-.3-.1-.7-.3-1-.3z"
                        />
                      </svg>
                    </button>
                    <svg
                      class="mapboxgl-ctrl-geocoder--icon mapboxgl-ctrl-geocoder--icon-loading"
                      height="18"
                      viewBox="0 0 18 18"
                      width="18"
                      xml:space="preserve"
                    >
                      <path
                        d="M4.4 4.4l.8.8c2.1-2.1 5.5-2.1 7.6 0l.8-.8c-2.5-2.5-6.7-2.5-9.2 0z"
                        fill="#333"
                      />
                      <path
                        d="M12.8 12.9c-2.1 2.1-5.5 2.1-7.6 0-2.1-2.1-2.1-5.5 0-7.7l-.8-.8c-2.5 2.5-2.5 6.7 0 9.2s6.6 2.5 9.2 0 2.5-6.6 0-9.2l-.8.8c2.2 2.1 2.2 5.6 0 7.7z"
                        opacity=".1"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <button
                class="btn btn-transparent text-white"
              >
                Use my location
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="py-4 mt-2 container"
      >
        <div
          class="pb-3 row"
        >
          <div
            class="col"
          >
            <div
              class="d-flex justify-content-between align-items-center"
            >
              <h2
                class="fw-bold"
              >
                Dashboard
              </h2>
              <div
                class="dropdown"
              >
                <button
                  aria-expanded="false"
                  class="dropdown-toggle btn btn-text"
                  id="fuelSelect"
                  type="button"
                >
                  <b>
                    Fuel:
                  </b>
                   
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="pb-3 row"
        >
          <div
            class="col"
          >
            <div
              class="border-0 shadow-sm card"
            >
              <div
                class="card-body"
              >
                <div
                  class="d-flex justify-content-between align-items-center"
                >
                  <div
                    class=""
                  >
                    <span
                      class="d-block text-uppercase fw-bold text-black-50 small"
                    >
                      Average Price
                    </span>
                    <span
                      class="d-block h3 text-uppercase fw-bold pt-3 pb-0"
                    >
                      $
                      ...
                    </span>
                  </div>
                  <div
                    class=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="col"
          >
            <div
              class="border-0 shadow-sm card"
            >
              <div
                class="card-body"
              >
                <div
                  class="d-flex justify-content-between align-items-center"
                >
                  <div
                    class=""
                  >
                    <span
                      class="d-block text-uppercase fw-bold text-black-50 small"
                    >
                      Lowest Price
                    </span>
                    <span
                      class="d-block h3 text-uppercase fw-bold pt-3 pb-0"
                    >
                      $
                      ...
                    </span>
                  </div>
                  <div
                    class=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="col"
          >
            <div
              class="border-0 shadow-sm card"
            >
              <div
                class="card-body"
              >
                <div
                  class="d-flex justify-content-between align-items-center"
                >
                  <div
                    class=""
                  >
                    <span
                      class="d-block text-uppercase fw-bold text-black-50 small"
                    >
                      Highest Price
                    </span>
                    <span
                      class="d-block h3 text-uppercase fw-bold pt-3 pb-0"
                    >
                      $
                      ...
                    </span>
                  </div>
                  <div
                    class=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="col"
          >
            <div
              class="border-0 shadow-sm card"
            >
              <div
                class="card-body"
              >
                <div
                  class="d-flex justify-content-between align-items-center"
                >
                  <div
                    class=""
                  >
                    <span
                      class="d-block text-uppercase fw-bold text-black-50 small"
                    >
                      Range
                    </span>
                    <span
                      class="d-block h3 text-uppercase fw-bold pt-3 pb-0"
                    >
                      $
                      ...
                    </span>
                  </div>
                  <div
                    class=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="welcome-hero container-fluid"
    >
      <div
        class="pb-3 justify-content-center align-items-center row"
      >
        <div
          class="py-5 col-xl-4 col-lg-5 col-sm-8"
        >
          <div
            class="rounded text-center text-white py-5"
          >
            <h1
              class="fw-bold"
            >
              Find the cheapest fuel for your vehicle.
            </h1>
            <span>
              Use your location or enter your suburb below.
            </span>
            <div
              class="hero-search-container mt-3"
            >
              <div
                class="mapboxgl-ctrl-geocoder mapboxgl-ctrl"
              >
                <svg
                  class="mapboxgl-ctrl-geocoder--icon mapboxgl-ctrl-geocoder--icon-search"
                  height="18"
                  viewBox="0 0 18 18"
                  width="18"
                  xml:space="preserve"
                >
                  <path
                    d="M7.4 2.5c-2.7 0-4.9 2.2-4.9 4.9s2.2 4.9 4.9 4.9c1 0 1.8-.2 2.5-.8l3.7 3.7c.2.2.4.3.8.3.7 0 1.1-.4 1.1-1.1 0-.3-.1-.5-.3-.8L11.4 10c.4-.8.8-1.6.8-2.5.1-2.8-2.1-5-4.8-5zm0 1.6c1.8 0 3.2 1.4 3.2 3.2s-1.4 3.2-3.2 3.2-3.3-1.3-3.3-3.1 1.4-3.3 3.3-3.3z"
                  />
                </svg>
                <input
                  aria-label="Search"
                  class="mapboxgl-ctrl-geocoder--input"
                  placeholder="Search"
                  type="text"
                />
                <div
                  class="suggestions-wrapper"
                >
                  <ul
                    class="suggestions"
                    style="display: none;"
                  />
                </div>
                <div
                  class="mapboxgl-ctrl-geocoder--pin-right"
                >
                  <button
                    aria-label="Clear"
                    class="mapboxgl-ctrl-geocoder--button"
                  >
                    <svg
                      class="mapboxgl-ctrl-geocoder--icon mapboxgl-ctrl-geocoder--icon-close"
                      height="18"
                      viewBox="0 0 18 18"
                      width="18"
                      xml:space="preserve"
                    >
                      <path
                        d="M3.8 2.5c-.6 0-1.3.7-1.3 1.3 0 .3.2.7.5.8L7.2 9 3 13.2c-.3.3-.5.7-.5 1 0 .6.7 1.3 1.3 1.3.3 0 .7-.2 1-.5L9 10.8l4.2 4.2c.2.3.7.3 1 .3.6 0 1.3-.7 1.3-1.3 0-.3-.2-.7-.3-1l-4.4-4L15 4.6c.3-.2.5-.5.5-.8 0-.7-.7-1.3-1.3-1.3-.3 0-.7.2-1 .3L9 7.1 4.8 2.8c-.3-.1-.7-.3-1-.3z"
                      />
                    </svg>
                  </button>
                  <svg
                    class="mapboxgl-ctrl-geocoder--icon mapboxgl-ctrl-geocoder--icon-loading"
                    height="18"
                    viewBox="0 0 18 18"
                    width="18"
                    xml:space="preserve"
                  >
                    <path
                      d="M4.4 4.4l.8.8c2.1-2.1 5.5-2.1 7.6 0l.8-.8c-2.5-2.5-6.7-2.5-9.2 0z"
                      fill="#333"
                    />
                    <path
                      d="M12.8 12.9c-2.1 2.1-5.5 2.1-7.6 0-2.1-2.1-2.1-5.5 0-7.7l-.8-.8c-2.5 2.5-2.5 6.7 0 9.2s6.6 2.5 9.2 0 2.5-6.6 0-9.2l-.8.8c2.2 2.1 2.2 5.6 0 7.7z"
                      opacity=".1"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <button
              class="btn btn-transparent text-white"
            >
              Use my location
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="py-4 mt-2 container"
    >
      <div
        class="pb-3 row"
      >
        <div
          class="col"
        >
          <div
            class="d-flex justify-content-between align-items-center"
          >
            <h2
              class="fw-bold"
            >
              Dashboard
            </h2>
            <div
              class="dropdown"
            >
              <button
                aria-expanded="false"
                class="dropdown-toggle btn btn-text"
                id="fuelSelect"
                type="button"
              >
                <b>
                  Fuel:
                </b>
                 
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="pb-3 row"
      >
        <div
          class="col"
        >
          <div
            class="border-0 shadow-sm card"
          >
            <div
              class="card-body"
            >
              <div
                class="d-flex justify-content-between align-items-center"
              >
                <div
                  class=""
                >
                  <span
                    class="d-block text-uppercase fw-bold text-black-50 small"
                  >
                    Average Price
                  </span>
                  <span
                    class="d-block h3 text-uppercase fw-bold pt-3 pb-0"
                  >
                    $
                    ...
                  </span>
                </div>
                <div
                  class=""
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="col"
        >
          <div
            class="border-0 shadow-sm card"
          >
            <div
              class="card-body"
            >
              <div
                class="d-flex justify-content-between align-items-center"
              >
                <div
                  class=""
                >
                  <span
                    class="d-block text-uppercase fw-bold text-black-50 small"
                  >
                    Lowest Price
                  </span>
                  <span
                    class="d-block h3 text-uppercase fw-bold pt-3 pb-0"
                  >
                    $
                    ...
                  </span>
                </div>
                <div
                  class=""
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="col"
        >
          <div
            class="border-0 shadow-sm card"
          >
            <div
              class="card-body"
            >
              <div
                class="d-flex justify-content-between align-items-center"
              >
                <div
                  class=""
                >
                  <span
                    class="d-block text-uppercase fw-bold text-black-50 small"
                  >
                    Highest Price
                  </span>
                  <span
                    class="d-block h3 text-uppercase fw-bold pt-3 pb-0"
                  >
                    $
                    ...
                  </span>
                </div>
                <div
                  class=""
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="col"
        >
          <div
            class="border-0 shadow-sm card"
          >
            <div
              class="card-body"
            >
              <div
                class="d-flex justify-content-between align-items-center"
              >
                <div
                  class=""
                >
                  <span
                    class="d-block text-uppercase fw-bold text-black-50 small"
                  >
                    Range
                  </span>
                  <span
                    class="d-block h3 text-uppercase fw-bold pt-3 pb-0"
                  >
                    $
                    ...
                  </span>
                </div>
                <div
                  class=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Snapshot Tests DashboardPage content 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="welcome-hero container-fluid"
      >
        <div
          class="pb-3 justify-content-center align-items-center row"
        >
          <div
            class="py-5 col-xl-4 col-lg-5 col-sm-8"
          >
            <div
              class="rounded text-center text-white py-5"
            >
              <h1
                class="fw-bold"
              >
                Find the cheapest fuel for your vehicle.
              </h1>
              <span>
                Use your location or enter your suburb below.
              </span>
              <div
                class="hero-search-container mt-3"
              >
                <div
                  class="mapboxgl-ctrl-geocoder mapboxgl-ctrl"
                >
                  <svg
                    class="mapboxgl-ctrl-geocoder--icon mapboxgl-ctrl-geocoder--icon-search"
                    height="18"
                    viewBox="0 0 18 18"
                    width="18"
                    xml:space="preserve"
                  >
                    <path
                      d="M7.4 2.5c-2.7 0-4.9 2.2-4.9 4.9s2.2 4.9 4.9 4.9c1 0 1.8-.2 2.5-.8l3.7 3.7c.2.2.4.3.8.3.7 0 1.1-.4 1.1-1.1 0-.3-.1-.5-.3-.8L11.4 10c.4-.8.8-1.6.8-2.5.1-2.8-2.1-5-4.8-5zm0 1.6c1.8 0 3.2 1.4 3.2 3.2s-1.4 3.2-3.2 3.2-3.3-1.3-3.3-3.1 1.4-3.3 3.3-3.3z"
                    />
                  </svg>
                  <input
                    aria-label="Search"
                    class="mapboxgl-ctrl-geocoder--input"
                    placeholder="Search"
                    type="text"
                  />
                  <div
                    class="suggestions-wrapper"
                  >
                    <ul
                      class="suggestions"
                      style="display: none;"
                    />
                  </div>
                  <div
                    class="mapboxgl-ctrl-geocoder--pin-right"
                  >
                    <button
                      aria-label="Clear"
                      class="mapboxgl-ctrl-geocoder--button"
                    >
                      <svg
                        class="mapboxgl-ctrl-geocoder--icon mapboxgl-ctrl-geocoder--icon-close"
                        height="18"
                        viewBox="0 0 18 18"
                        width="18"
                        xml:space="preserve"
                      >
                        <path
                          d="M3.8 2.5c-.6 0-1.3.7-1.3 1.3 0 .3.2.7.5.8L7.2 9 3 13.2c-.3.3-.5.7-.5 1 0 .6.7 1.3 1.3 1.3.3 0 .7-.2 1-.5L9 10.8l4.2 4.2c.2.3.7.3 1 .3.6 0 1.3-.7 1.3-1.3 0-.3-.2-.7-.3-1l-4.4-4L15 4.6c.3-.2.5-.5.5-.8 0-.7-.7-1.3-1.3-1.3-.3 0-.7.2-1 .3L9 7.1 4.8 2.8c-.3-.1-.7-.3-1-.3z"
                        />
                      </svg>
                    </button>
                    <svg
                      class="mapboxgl-ctrl-geocoder--icon mapboxgl-ctrl-geocoder--icon-loading"
                      height="18"
                      viewBox="0 0 18 18"
                      width="18"
                      xml:space="preserve"
                    >
                      <path
                        d="M4.4 4.4l.8.8c2.1-2.1 5.5-2.1 7.6 0l.8-.8c-2.5-2.5-6.7-2.5-9.2 0z"
                        fill="#333"
                      />
                      <path
                        d="M12.8 12.9c-2.1 2.1-5.5 2.1-7.6 0-2.1-2.1-2.1-5.5 0-7.7l-.8-.8c-2.5 2.5-2.5 6.7 0 9.2s6.6 2.5 9.2 0 2.5-6.6 0-9.2l-.8.8c2.2 2.1 2.2 5.6 0 7.7z"
                        opacity=".1"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <button
                class="btn btn-transparent text-white"
              >
                Use my location
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="py-4 mt-2 container"
      >
        <div
          class="pb-3 row"
        >
          <div
            class="col"
          >
            <div
              class="d-flex justify-content-between align-items-center"
            >
              <h2
                class="fw-bold"
              >
                Dashboard
              </h2>
              <div
                class="dropdown"
              >
                <button
                  aria-expanded="false"
                  class="dropdown-toggle btn btn-text"
                  id="fuelSelect"
                  type="button"
                >
                  <b>
                    Fuel:
                  </b>
                   
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="pb-3 row"
        >
          <div
            class="col"
          >
            <div
              class="border-0 shadow-sm card"
            >
              <div
                class="card-body"
              >
                <div
                  class="d-flex justify-content-between align-items-center"
                >
                  <div
                    class=""
                  >
                    <span
                      class="d-block text-uppercase fw-bold text-black-50 small"
                    >
                      Average Price
                    </span>
                    <span
                      class="d-block h3 text-uppercase fw-bold pt-3 pb-0"
                    >
                      $
                      ...
                    </span>
                  </div>
                  <div
                    class=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="col"
          >
            <div
              class="border-0 shadow-sm card"
            >
              <div
                class="card-body"
              >
                <div
                  class="d-flex justify-content-between align-items-center"
                >
                  <div
                    class=""
                  >
                    <span
                      class="d-block text-uppercase fw-bold text-black-50 small"
                    >
                      Lowest Price
                    </span>
                    <span
                      class="d-block h3 text-uppercase fw-bold pt-3 pb-0"
                    >
                      $
                      ...
                    </span>
                  </div>
                  <div
                    class=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="col"
          >
            <div
              class="border-0 shadow-sm card"
            >
              <div
                class="card-body"
              >
                <div
                  class="d-flex justify-content-between align-items-center"
                >
                  <div
                    class=""
                  >
                    <span
                      class="d-block text-uppercase fw-bold text-black-50 small"
                    >
                      Highest Price
                    </span>
                    <span
                      class="d-block h3 text-uppercase fw-bold pt-3 pb-0"
                    >
                      $
                      ...
                    </span>
                  </div>
                  <div
                    class=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="col"
          >
            <div
              class="border-0 shadow-sm card"
            >
              <div
                class="card-body"
              >
                <div
                  class="d-flex justify-content-between align-items-center"
                >
                  <div
                    class=""
                  >
                    <span
                      class="d-block text-uppercase fw-bold text-black-50 small"
                    >
                      Range
                    </span>
                    <span
                      class="d-block h3 text-uppercase fw-bold pt-3 pb-0"
                    >
                      $
                      ...
                    </span>
                  </div>
                  <div
                    class=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="welcome-hero container-fluid"
    >
      <div
        class="pb-3 justify-content-center align-items-center row"
      >
        <div
          class="py-5 col-xl-4 col-lg-5 col-sm-8"
        >
          <div
            class="rounded text-center text-white py-5"
          >
            <h1
              class="fw-bold"
            >
              Find the cheapest fuel for your vehicle.
            </h1>
            <span>
              Use your location or enter your suburb below.
            </span>
            <div
              class="hero-search-container mt-3"
            >
              <div
                class="mapboxgl-ctrl-geocoder mapboxgl-ctrl"
              >
                <svg
                  class="mapboxgl-ctrl-geocoder--icon mapboxgl-ctrl-geocoder--icon-search"
                  height="18"
                  viewBox="0 0 18 18"
                  width="18"
                  xml:space="preserve"
                >
                  <path
                    d="M7.4 2.5c-2.7 0-4.9 2.2-4.9 4.9s2.2 4.9 4.9 4.9c1 0 1.8-.2 2.5-.8l3.7 3.7c.2.2.4.3.8.3.7 0 1.1-.4 1.1-1.1 0-.3-.1-.5-.3-.8L11.4 10c.4-.8.8-1.6.8-2.5.1-2.8-2.1-5-4.8-5zm0 1.6c1.8 0 3.2 1.4 3.2 3.2s-1.4 3.2-3.2 3.2-3.3-1.3-3.3-3.1 1.4-3.3 3.3-3.3z"
                  />
                </svg>
                <input
                  aria-label="Search"
                  class="mapboxgl-ctrl-geocoder--input"
                  placeholder="Search"
                  type="text"
                />
                <div
                  class="suggestions-wrapper"
                >
                  <ul
                    class="suggestions"
                    style="display: none;"
                  />
                </div>
                <div
                  class="mapboxgl-ctrl-geocoder--pin-right"
                >
                  <button
                    aria-label="Clear"
                    class="mapboxgl-ctrl-geocoder--button"
                  >
                    <svg
                      class="mapboxgl-ctrl-geocoder--icon mapboxgl-ctrl-geocoder--icon-close"
                      height="18"
                      viewBox="0 0 18 18"
                      width="18"
                      xml:space="preserve"
                    >
                      <path
                        d="M3.8 2.5c-.6 0-1.3.7-1.3 1.3 0 .3.2.7.5.8L7.2 9 3 13.2c-.3.3-.5.7-.5 1 0 .6.7 1.3 1.3 1.3.3 0 .7-.2 1-.5L9 10.8l4.2 4.2c.2.3.7.3 1 .3.6 0 1.3-.7 1.3-1.3 0-.3-.2-.7-.3-1l-4.4-4L15 4.6c.3-.2.5-.5.5-.8 0-.7-.7-1.3-1.3-1.3-.3 0-.7.2-1 .3L9 7.1 4.8 2.8c-.3-.1-.7-.3-1-.3z"
                      />
                    </svg>
                  </button>
                  <svg
                    class="mapboxgl-ctrl-geocoder--icon mapboxgl-ctrl-geocoder--icon-loading"
                    height="18"
                    viewBox="0 0 18 18"
                    width="18"
                    xml:space="preserve"
                  >
                    <path
                      d="M4.4 4.4l.8.8c2.1-2.1 5.5-2.1 7.6 0l.8-.8c-2.5-2.5-6.7-2.5-9.2 0z"
                      fill="#333"
                    />
                    <path
                      d="M12.8 12.9c-2.1 2.1-5.5 2.1-7.6 0-2.1-2.1-2.1-5.5 0-7.7l-.8-.8c-2.5 2.5-2.5 6.7 0 9.2s6.6 2.5 9.2 0 2.5-6.6 0-9.2l-.8.8c2.2 2.1 2.2 5.6 0 7.7z"
                      opacity=".1"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <button
              class="btn btn-transparent text-white"
            >
              Use my location
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="py-4 mt-2 container"
    >
      <div
        class="pb-3 row"
      >
        <div
          class="col"
        >
          <div
            class="d-flex justify-content-between align-items-center"
          >
            <h2
              class="fw-bold"
            >
              Dashboard
            </h2>
            <div
              class="dropdown"
            >
              <button
                aria-expanded="false"
                class="dropdown-toggle btn btn-text"
                id="fuelSelect"
                type="button"
              >
                <b>
                  Fuel:
                </b>
                 
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="pb-3 row"
      >
        <div
          class="col"
        >
          <div
            class="border-0 shadow-sm card"
          >
            <div
              class="card-body"
            >
              <div
                class="d-flex justify-content-between align-items-center"
              >
                <div
                  class=""
                >
                  <span
                    class="d-block text-uppercase fw-bold text-black-50 small"
                  >
                    Average Price
                  </span>
                  <span
                    class="d-block h3 text-uppercase fw-bold pt-3 pb-0"
                  >
                    $
                    ...
                  </span>
                </div>
                <div
                  class=""
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="col"
        >
          <div
            class="border-0 shadow-sm card"
          >
            <div
              class="card-body"
            >
              <div
                class="d-flex justify-content-between align-items-center"
              >
                <div
                  class=""
                >
                  <span
                    class="d-block text-uppercase fw-bold text-black-50 small"
                  >
                    Lowest Price
                  </span>
                  <span
                    class="d-block h3 text-uppercase fw-bold pt-3 pb-0"
                  >
                    $
                    ...
                  </span>
                </div>
                <div
                  class=""
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="col"
        >
          <div
            class="border-0 shadow-sm card"
          >
            <div
              class="card-body"
            >
              <div
                class="d-flex justify-content-between align-items-center"
              >
                <div
                  class=""
                >
                  <span
                    class="d-block text-uppercase fw-bold text-black-50 small"
                  >
                    Highest Price
                  </span>
                  <span
                    class="d-block h3 text-uppercase fw-bold pt-3 pb-0"
                  >
                    $
                    ...
                  </span>
                </div>
                <div
                  class=""
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="col"
        >
          <div
            class="border-0 shadow-sm card"
          >
            <div
              class="card-body"
            >
              <div
                class="d-flex justify-content-between align-items-center"
              >
                <div
                  class=""
                >
                  <span
                    class="d-block text-uppercase fw-bold text-black-50 small"
                  >
                    Range
                  </span>
                  <span
                    class="d-block h3 text-uppercase fw-bold pt-3 pb-0"
                  >
                    $
                    ...
                  </span>
                </div>
                <div
                  class=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Snapshot Tests FuelGraph Snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="border-0 shadow-sm card"
      >
        <div
          class="card-body"
        >
          <span
            class="d-block text-uppercase fw-bold text-black-50 small mb-3"
          >
            Average 
             Price
          </span>
          <div
            class="recharts-responsive-container"
            style="width: 100%; height: 100%;"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="border-0 shadow-sm card"
    >
      <div
        class="card-body"
      >
        <span
          class="d-block text-uppercase fw-bold text-black-50 small mb-3"
        >
          Average 
           Price
        </span>
        <div
          class="recharts-responsive-container"
          style="width: 100%; height: 100%;"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Snapshot Tests MetricCard Snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="border-0 shadow-sm card"
      >
        <div
          class="card-body"
        >
          <div
            class="d-flex justify-content-between align-items-center"
          >
            <div
              class=""
            >
              <span
                class="d-block text-uppercase fw-bold text-black-50 small"
              >
                Title
              </span>
              <span
                class="d-block h3 text-uppercase fw-bold pt-3 pb-0"
              >
                $
                1.205
              </span>
            </div>
            <div
              class=""
            >
              <span
                class="badge bg-success"
              >
                <span>
                  ↓ 
                  -0.094
                  % Δ
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="border-0 shadow-sm card"
    >
      <div
        class="card-body"
      >
        <div
          class="d-flex justify-content-between align-items-center"
        >
          <div
            class=""
          >
            <span
              class="d-block text-uppercase fw-bold text-black-50 small"
            >
              Title
            </span>
            <span
              class="d-block h3 text-uppercase fw-bold pt-3 pb-0"
            >
              $
              1.205
            </span>
          </div>
          <div
            class=""
          >
            <span
              class="badge bg-success"
            >
              <span>
                ↓ 
                -0.094
                % Δ
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Snapshot Tests MetricCard content 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="border-0 shadow-sm card"
      >
        <div
          class="card-body"
        >
          <div
            class="d-flex justify-content-between align-items-center"
          >
            <div
              class=""
            >
              <span
                class="d-block text-uppercase fw-bold text-black-50 small"
              >
                Title
              </span>
              <span
                class="d-block h3 text-uppercase fw-bold pt-3 pb-0"
              >
                $
                1.205
              </span>
            </div>
            <div
              class=""
            >
              <span
                class="badge bg-success"
              >
                <span>
                  ↓ 
                  -0.094
                  % Δ
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="border-0 shadow-sm card"
    >
      <div
        class="card-body"
      >
        <div
          class="d-flex justify-content-between align-items-center"
        >
          <div
            class=""
          >
            <span
              class="d-block text-uppercase fw-bold text-black-50 small"
            >
              Title
            </span>
            <span
              class="d-block h3 text-uppercase fw-bold pt-3 pb-0"
            >
              $
              1.205
            </span>
          </div>
          <div
            class=""
          >
            <span
              class="badge bg-success"
            >
              <span>
                ↓ 
                -0.094
                % Δ
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
